--- a/banh.css
+++ b/banh.css
@@ -10,7 +10,7 @@
 
 /* Body Styles */
 body {
-  background-color: #000;
+  background-color: #ffe6f0;
   position: relative;
   font-family: 'Poppins', sans-serif;
   overflow: hidden;
